# Learn_Git_APP_Foot_Manager

./: .gitignore  README.md  app.py  fruit_manager.py  pyproject.toml  readme.md
